--- a/game/config/settings.json
+++ b/game/config/settings.json
@@ -3,6 +3,7 @@
     "game_height": 720,
     "fps": 60,
     "autosave_timeout": 5000,
-    "bgm": 0.13,
-    "sfx": 0.45
+    "bgm": 0.19,
+    "sfx": 0.8,
+    "full_screen": false
 }
