--- a/game/config/settings.json
+++ b/game/config/settings.json
@@ -3,7 +3,7 @@
     "game_height": 720,
     "fps": 60,
     "autosave_timeout": 5000,
-    "bgm": 0.33,
-    "sfx": 0.68,
-    "full_screen": true
+    "bgm": 0.0,
+    "sfx": 0.66,
+    "full_screen": false
 }
