--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 __pycache__/
+game/__pycache__/
+game/sprite/__pycache__/
+
+game/debug/*
+game/progress/*
+
+!game/debug/.gitkeep
+!game/progress/.gitkeep
