setting gitkeep and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@ __pycache__/
 game/__pycache__/
 game/sprite/__pycache__/
 
-game/debug/previous_log.txt
-game/progress/progress.json
+game/debug/*
+game/progress/*
+
+!game/debug/.gitkeep
+!game/progress/.gitkeep
